# weather-agent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.ja.md  README.md  notes.ja.md  pyproject.toml
.github/workflows/: lint.yml
weather_agent/: __init__.py  agent.py  config.py  main.py
